--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Test of card 3D as sockets and three.js",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Diego Torres",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.2",
+    "socket.io": "^2.3.0",
+    "three": "^0.114.0"
   }
 }
